--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "date-fns": "^4.1.0",
     "debug": "^4.3.7",
     "dotenv": "^16.4.5",
+    "exceljs": "^4.4.0",
     "express": "^4.21.1",
     "express-rate-limit": "^7.4.1",
     "joi": "^17.13.3",
+    "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.4",
     "nodemon": "^3.1.7",
