--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,22 +2,26 @@
 FROM node:lts-alpine
 
 # Set working directory
-WORKDIR /home/library_management/
+WORKDIR /app
 
 # Install dependencies
 RUN apk update && apk upgrade && \
     apk add --no-cache bash git openssh curl
 
-# Clone the repository
-RUN git clone https://github.com/ibrahimahmed237/library-management.git
 
-WORKDIR /home/library_management/library-management/
+# Copy the rest of the application
+COPY . .
 
 # Install project dependencies
 RUN npm install
 
 # Install sequelize-cli globally
 RUN npm install -g sequelize-cli
+
+
+
+# Create necessary directories if they don't exist
+RUN mkdir -p sequelize-migrations/migrations sequelize-migrations/seeders
 
 # Run migrations and seeders
 RUN npm run db:migrate || true && \
@@ -26,12 +30,5 @@ RUN npm run db:migrate || true && \
 # Expose port 3030
 EXPOSE 3030
 
-# Start server with a modified command for startup sequence
-CMD /bin/bash -c '\
-    cd src && \
-    git fetch && \
-    git reset --hard origin && \
-    npm install && \
-    sequelize db:migrate && \
-    sequelize db:seed:all && \
-    node server.js'
+# Start server
+CMD ["node", "src/server.js"]
