--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,34 +1,20 @@
-# Use node:lts-alpine as a base image
-FROM node:lts-alpine
+FROM node:18
 
-# Set working directory
+# Create required directories
 WORKDIR /app
 
-# Install dependencies
-RUN apk update && apk upgrade && \
-    apk add --no-cache bash git openssh curl
-
-
-# Copy the rest of the application
-COPY . .
+# Copy package files
+COPY package*.json ./
 
 # Install project dependencies
 RUN npm install
 
-# Install sequelize-cli globally
-RUN npm install -g sequelize-cli
-
-
-
-# Create necessary directories if they don't exist
-RUN mkdir -p sequelize-migrations/migrations sequelize-migrations/seeders
-
-# Run migrations and seeders
-RUN npm run db:migrate || true && \
-    npm run db:seed:all || true
+# Copy the rest of the application
+COPY . .
 
 # Expose port 3030
 EXPOSE 3030
 
-# Start server
-CMD ["node", "src/server.js"]
+WORKDIR /app/src
+
+CMD ["sh", "-c", "npm run db:create && npm run db:migrate && npm run db:seed:all && node server.js"]
