--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -17,6 +17,5 @@ EXPOSE 3030
 
 WORKDIR /app/src
 
-CMD ["sh", "-c", "npm run db:create && npm run db:seed:undo:all && npm run db:migrate:undo:all  && npm run db:migrate && npm run db:seed:all && node server.js"]
 
-# CMD ["sh", "-c", "npm run db:create && npm run db:migrate && npm run db:seed:all && node server.js"]
+CMD ["sh", "-c", "npm run db:create && npm run db:migrate && npm run db:seed:all && node server.js"]
