Refactor Dockerfile to create a startup script for migrations and seeding, update Book model to use camelCase for timestamps, and remove unnecessary image definition in docker-compose

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,21 +1,20 @@
 FROM node:18
 
-# Create required directories
 WORKDIR /app
 
-# Copy package files
 COPY package*.json ./
-
-# Install project dependencies
 RUN npm install
-
-# Copy the rest of the application
 COPY . .
 
-# Expose port 3030
 EXPOSE 3030
 
 WORKDIR /app/src
 
+# Create startup script using RUN
+RUN echo '#!/bin/sh' > /app/start.sh && \
+    echo 'npm run db:migrate' >> /app/start.sh && \
+    echo 'npm run db:seed:all || true' >> /app/start.sh && \
+    echo 'node server.js' >> /app/start.sh && \
+    chmod +x /app/start.sh
 
-CMD ["sh", "-c", "npm run db:create && npm run db:migrate && npm run db:seed:all && node server.js"]
+CMD ["/app/start.sh"]
