--- a/package.json
+++ b/package.json
@@ -5,11 +5,9 @@
   "scripts": {
     "test": "jest",
     "start": "nodemon src/server.js",
-    "db:create": "sequelize-cli db:create",
-    "db:migrate": "sequelize-cli db:migrate",
-    "db:migrate:undo:all": "sequelize-cli db:migrate:undo:all",
-    "db:seed:undo:all": "sequelize-cli db:seed:undo:all",
-    "db:seed:all": "sequelize-cli db:seed:all"
+    "migrate": "knex migrate:latest",
+    "migrate:rollback": "knex migrate:rollback",
+    "seed": "knex seed:run"
   },
   "author": "ibrahim",
   "license": "ISC",
@@ -25,6 +23,7 @@
     "jest": "^29.7.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "knex": "^3.1.0",
     "mysql2": "^3.11.4",
     "nodemon": "^3.1.7",
     "sequelize": "^6.37.5",
