--- a/package.json
+++ b/package.json
@@ -3,11 +3,17 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "test": "dotenv -e .env.test jest",  
+    "test": "jest",
     "start": "nodemon src/server.js",
     "migrate": "knex migrate:latest",
     "migrate:rollback": "knex migrate:rollback",
     "seed": "knex seed:run"
+  },
+  "jest": {
+    "setupFiles": [
+      "<rootDir>/src/tests/setup.js"
+    ],
+    "testEnvironment": "node"
   },
   "author": "ibrahim",
   "license": "ISC",
@@ -20,7 +26,6 @@
     "express": "^4.21.1",
     "express-rate-limit": "^7.4.1",
     "ioredis": "^5.4.1",
-    "jest": "^29.7.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
@@ -30,5 +35,9 @@
     "sequelize-cli": "^6.6.2",
     "supertest": "^7.0.0",
     "xlsx": "^0.18.5"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "sequelize-mock": "^0.10.2"
   }
 }
